remove visible_url

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,7 +15,7 @@
     <div class="main-text">
     <h1>Usage</h1>
     <p>You can access the channels by putting the<br>following playlist URL in your media player:</p>
-    <code>{{ visible_url }}/channels.m3u</code>
+    <code>{{ m3u_url }}</code>
     <h1>Support</h1>
     <p>If something isn't working, you may ask for help in the <a href="https://discord.gg/mc4WaSApvS">Discord channel</a>.</p>
     </div>
